--- a/resume/project/templates/project/index.html
+++ b/resume/project/templates/project/index.html
@@ -55,7 +55,7 @@
           <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#">Blog</a>
+          <a class="nav-link js-scroll-trigger" href="{% url 'blog:all_blogs' %}">Blog</a>
         </li>
 
       </ul>
